# local-vectored-llm

./: .gitignore  Cargo.toml  Makefile  README.md  SPEC.md  compose.yaml  feature.md  pending.md  steps.md
docker/chromadb/: Dockerfile
docker/ollama/: Dockerfile
src/: chromadb.rs  file.rs  lib.rs  ollama.rs
src/chroma/: document.rs  mod.rs  store.rs
src/document/: markdown.rs  mod.rs  pdf.rs
src/embedding/: mod.rs
src/llm/: mod.rs
src/logger/: mod.rs
src/ollama/: mod.rs
src/utils/: error.rs  logger.rs  mod.rs
testdata/: sample.txt
