[package]
name = "local-vectored-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.4.0"
futures = "0.3.30"
chromadb = "2.2.2"
ollama-rs = "0.3.1"
async-trait = "0.1.77"
pdf = "0.8.1"
markdown = "0.3.0"

[[bin]]
name = "rag-load"
path = "src/bin/load.rs"

[[bin]]
name = "rag-chat"
path = "src/bin/chat.rs"

[lib]
name = "local_vectored_llm"
path = "src/lib.rs"
