[package]
name = "local-vectored-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
anyhow = { version = "1.0.98", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
time = { version = "0.3", default-features = false }
walkdir = "2.4.0"
futures = { version = "0.3.30", default-features = false }
chromadb = "2.2.2"
ollama-rs = "0.3.1"
async-trait = "0.1.77"
pdf = { version = "0.8.1", features = ["cache"], default-features = false }
markdown = "0.3.0"
chrono = { version = "0.4.34", features = ["clock"], default-features = false }
colored = "2.1.0"

[[bin]]
name = "load"
path = "src/bin/load.rs"

[[bin]]
name = "chat"
path = "src/bin/chat.rs"

[lib]
name = "local_vectored_llm"
path = "src/lib.rs"
